# cpp-bpe-tokenizer

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
bench/: bench_decode.cpp  bench_encode.cpp  bench_helpers.h  bench_pretokenizer.cpp  bench_train.cpp
docs/: BENCHMARK_RESULTS.md  SOTA_PROOF.md
include/bpe/: codec.h  pretokenizer.h  tokenizer.h  trainer.h  types.h  utils.h
scripts/: compare_perf.py  cpp_encode_probe.cpp  gen_fixtures.py  sota_encode_report.py
src/: codec.cpp  pretokenizer.cpp  tokenizer.cpp  trainer.cpp  utils.cpp
tests/: test_correctness.cpp  test_edge_cases.cpp  test_encode_decode.cpp  test_helpers.h  test_load_validation.cpp  test_pretokenizer.cpp  test_public_api.cpp  test_roundtrip.cpp  test_special_tokens.cpp  test_thread_safety.cpp  test_train.cpp
tests/cmake/consumer/: CMakeLists.txt  main.cpp
